[gd_scene load_steps=7 format=3 uid="uid://bd4wan8sg87fp"]

[ext_resource type="Texture2D" uid="uid://bcslu47o53ps4" path="res://assets/sprites/revolver_room/revolver.png" id="1_l8kpe"]
[ext_resource type="Script" uid="uid://bwacgg0pyo3" path="res://scripts/interaction_scripts/item_give/toy_revolver_interaction.gd" id="2_l8kpe"]
[ext_resource type="Texture2D" uid="uid://beh4pnr72b2sx" path="res://assets/blank_frame_bigger.png" id="3_70kal"]
[ext_resource type="FontFile" uid="uid://b5lqlis8c3a4k" path="res://assets/I-pixel-u.ttf" id="4_kmsp7"]
[ext_resource type="PackedScene" uid="uid://c1s8mfal8dbj3" path="res://assets/audio/sound.tscn" id="5_3n3oc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dl05t"]

[node name="StaticBody2D" type="StaticBody2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_l8kpe")

[node name="interaction" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
script = ExtResource("2_l8kpe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="interaction"]
shape = SubResource("RectangleShape2D_dl05t")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="BlankFrameBigger" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(578, 524)
scale = Vector2(4, 3.01563)
texture = ExtResource("3_70kal")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/BlankFrameBigger"]
offset_left = -126.0
offset_top = -30.0
offset_right = 126.0
offset_bottom = 30.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="CanvasLayer/BlankFrameBigger"]
offset_left = -122.0
offset_top = -25.8652
offset_right = -17.0
offset_bottom = -14.8652
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_kmsp7")
theme_override_font_sizes/font_size = 8

[node name="Sound" parent="." instance=ExtResource("5_3n3oc")]

[connection signal="area_entered" from="interaction" to="interaction" method="_on_area_entered"]
[connection signal="area_exited" from="interaction" to="interaction" method="_on_area_exited"]
